@@ -1,5 +1,8 @@
 [b]Version 0.6.6[/b]:
 
+(2008-11-16)
+ * The mini gui can now also remember the position and size of the window.
+
 (2008-11-15)
  * Added a new action to select the next aspect ratio. Assigned by default to
    key "A". Unfortunately this change breaks compatibility and the aspect
